# magicblock-validator

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_PROCESS.md  SECURITY.md  action.yml  config.example.toml  config.toml  lld.md  log  mimd-0025.md  post-delegation-actions-fix.md  run-schedulecommit-ephm.sh
bank/: Cargo.toml
bank/src/: bank.rs  bank_dev_utils.rs  bank_helpers.rs  builtins.rs  consts.rs  lib.rs  status_cache.rs  transaction_logs.rs  transaction_results.rs
bank/tests/: bank.rs
compressed-delegation-api/: Cargo.toml
compressed-delegation-api/src/: instruction.rs  lib.rs  state.rs
compressed-delegation-client/: Cargo.toml
compressed-delegation-client/src/: common.rs  lib.rs  mod.rs  programs.rs  shared.rs  utils.rs
magicblock-account-cloner/: Cargo.toml  README.md
magicblock-account-cloner/src/: account_cloner.rs  bpf_loader_v1.rs  lib.rs  remote_account_cloner_client.rs  remote_account_cloner_worker.rs  util.rs
magicblock-account-cloner/tests/: remote_account_cloner.rs
magicblock-account-dumper/: Cargo.toml
magicblock-account-dumper/src/: account_dumper.rs  account_dumper_bank.rs  account_dumper_stub.rs
magicblock-accounts/: Cargo.toml  README.md
magicblock-accounts-api/: Cargo.toml
magicblock-accounts-api/src/: bank_account_provider.rs  internal_account_provider.rs  internal_account_provider_stub.rs
magicblock-accounts-db/: Cargo.toml  README.md  error.rs  index.rs  lib.rs  snapshot.rs  storage.rs  tests.rs
magicblock-accounts-db/src/: account_info.rs  accounts.rs  accounts_update_notifier_interface.rs  config.rs  error.rs  errors.rs  geyser.rs  index.rs  lib.rs  reset.rs  snapshot.rs  storage.rs  tests.rs  traits.rs
magicblock-accounts/src/: accounts_manager.rs  config.rs  errors.rs  external_accounts_manager.rs  lib.rs  old_remote_scheduled_commits_processor.rs  remote_account_committer.rs  remote_scheduled_commits_processor.rs  remote_scheduled_commits_worker.rs  scheduled_commits_processor.rs  traits.rs
magicblock-accounts/tests/: commit_delegated.rs  ensure_accounts.rs
magicblock-aml/: Cargo.toml
magicblock-aml/src/: lib.rs
magicblock-aperture/: Cargo.toml  README.md
magicblock-aperture/src/: encoder.rs  engine_types.rs  error.rs  geyser.rs  lib.rs  processor.rs  tests.rs  utils.rs
magicblock-aperture/tests/: accounts.rs  batches.rs  blocks.rs  mocked.rs  node.rs  setup.rs  transaction_primary_mode.rs  transactions.rs  websocket.rs
magicblock-api/: Cargo.toml  README.md
magicblock-api/src/: accounts.rs  crank_faucet.rs  domain_registry_manager.rs  errors.rs  external_config.rs  finality_provider.rs  fund_account.rs  genesis_utils.rs  geyser_transaction_notify_listener.rs  init_geyser_service.rs  ledger.rs  ledger_cleanup_service.rs  ledger_purgatory.rs  lib.rs  magic_sys_adapter.rs  magic_validator.rs  program_loader.rs  slot.rs  tickers.rs
magicblock-api/tests/: test_clocks_match.rs  test_get_block_timestamp_stability.rs
magicblock-chainlink/: Cargo.toml
magicblock-chainlink/src/: accounts_bank.rs  delegation_record.rs  lib.rs  validator_types.rs
magicblock-chainlink/tests/: 01_ensure-accounts.rs  03_deleg_after_sub.rs  04_redeleg_other_separate_slots.rs  05_redeleg_other_same_slot.rs  06_redeleg_us_separate_slots.rs  07_redeleg_us_same_slot.rs  08_subupdate-ordering.rs  09_waiter_reconciliation_race.rs  10_aml_undelegation.rs  10_non_primary_gating.rs  11_lifecycle_shutdown.rs  basics.rs
magicblock-committor-program/: Cargo.toml
magicblock-committor-program/src/: consts.rs  error.rs  instruction.rs  instruction_chunks.rs  lib.rs  pdas.rs  processor.rs
magicblock-committor-program/tests/: prog_init_write_and_close.rs  prog_security.rs
magicblock-committor-service/: CHANGES.md  CLAUDE.md  Cargo.toml  README.md
magicblock-committor-service/src/: actions_callback_executor.rs  bundle_strategy.rs  bundles.rs  commit_info.rs  commit_scheduler.rs  commit_stage.rs  commit_strategy.rs  committor_processor.rs  compute_budget.rs  config.rs  consts.rs  error.rs  finalize.rs  intent_engine.rs  intent_engine_handle.rs  intent_execution_manager.rs  l1_message_executor.rs  lib.rs  outbox_client.rs  pubkeys_provider.rs  service.rs  service_ext.rs  service_final.rs  test_utils.rs  transactions.rs  types.rs  undelegate.rs  utils.rs
magicblock-committor-service/tests/: common.rs  test_delivery_preparator.rs  test_message_executor.rs  test_transaction_preparator.rs
magicblock-committor-service/todo-tests/: ix_commit_local.rs
magicblock-config/: Cargo.toml  README.md
magicblock-config-macro/: Cargo.toml  README.md
magicblock-config-macro/src/: clap_from_serde.rs  clap_prefix.rs  lib.rs  merger.rs
magicblock-config-macro/tests/: test_merger.rs
magicblock-config/src/: accounts.rs  accounts_db.rs  cli.rs  compression.rs  consts.rs  errors.rs  geyser_grpc.rs  ledger.rs  lib.rs  metrics.rs  program.rs  rpc.rs  task_scheduler.rs  tests.rs  validator.rs
magicblock-config/tests/: parse_config.rs  read_config.rs
magicblock-configuration/: Cargo.toml  README.md
magicblock-configuration/src/: config.rs  consts.rs  lib.rs  remote.rs  tests.rs  types.rs
magicblock-core/: Cargo.toml
magicblock-core/src/: compression.rs  coordination_mode.rs  intent.rs  lib.rs  link.rs  magic_program.rs  shutdown.rs  time_delta.rs  tls.rs  token_programs.rs  traits.rs  tui.rs
magicblock-gateway/: Cargo.toml  README.md
magicblock-gateway-types/: Cargo.toml
magicblock-gateway-types/src/: accounts.rs  blocks.rs  lib.rs  transactions.rs
magicblock-gateway/src/: encoder.rs  error.rs  lib.rs  notification.rs  processor.rs  tests.rs  utils.rs
magicblock-gateway/tests/: accounts.rs  blocks.rs  mocked.rs  (+4 more)
magicblock-geyser/: Cargo.toml
magicblock-ledger/: Cargo.toml
magicblock-magic-program-api/: Cargo.toml
magicblock-metrics/: Cargo.toml  README.md
magicblock-mutator/: Cargo.toml
magicblock-processor/: Cargo.toml  README.md
magicblock-query-filtering/: Cargo.toml
magicblock-replicator/: Cargo.toml  README.md
magicblock-rpc-client/: Cargo.toml
(+1651 files in other folders)
