[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[workspace]
members = [
  "magicblock-account-cloner",
  "magicblock-accounts",
  "magicblock-accounts-db",
  "magicblock-api",
  "magicblock-chainlink",
  "magicblock-committor-program",
  "magicblock-committor-service",
  "magicblock-config",
  "magicblock-core",
  "magicblock-aperture",
  "magicblock-magic-program-api",
  "magicblock-ledger",
  "magicblock-metrics",
  "magicblock-processor",
  "magicblock-rpc-client",
  "magicblock-services",
  "magicblock-table-mania",
  "magicblock-task-scheduler",
  "magicblock-validator",
  "magicblock-validator-admin",
  "magicblock-version",
  "programs/guinea",
  "programs/magicblock",
  "test-kit",
  "tools/genx",
  "tools/keypair-base58",
  "tools/ledger-stats",
  "tools/magicblock-tui-client",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
# Solana Version (3.x migration in progress)
version = "0.8.6"
authors = ["MagicBlock Maintainers <maintainers@magicblock.xyz>"]
repository = "https://github.com/magicblock-labs/ephemeral-validator"
homepage = "https://www.magicblock.xyz"
license = "Business Source License 1.1"
edition = "2021"

[workspace.dependencies]
agave-geyser-plugin-interface = { version = "3.1" }
agave-precompiles = { version = "3.1" }
agave-syscalls = { version = "3.1" }
anyhow = "1.0.86"
arc-swap = { version = "1.7" }
assert_matches = "1.5.0"
async-trait = "0.1.77"
base64 = "0.21.7"
bincode = "1.3.3"
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }
bs58 = "0.5.1"
byteorder = "1.5.0"
chrono = "0.4"
clap = "4.5.40"
console-subscriber = "0.5.0"
derive_more = "2.0"
ed25519-dalek = "1.0.1"
enum-iterator = "1.5.0"
fastwebsockets = "0.10"
fd-lock = "4.0.2"
figment = "0.10"
flume = "0.11"
fs_extra = "1.3.0"
futures = "0.3"
futures-util = "0.3.30"
git-version = "0.3.9"
guinea = { path = "./programs/guinea" }
helius-laserstream = { git = "https://github.com/magicblock-labs/laserstream-sdk", branch = "v0.2.8+conn-fix" }
http-body-util = "0.1.3"
humantime = { version = "1.1", package = "humantime-serde" }
hyper = "1.6.0"
hyper-util = "0.1.15"
isocountry = "0.3.2"
itertools = "0.14"
json = { package = "sonic-rs", version = "0.5.3" }
lazy_static = "1.4.0"
libloading = "0.8"
libc = "0.2.153"
# Only used in magicblock-ledger for solana_metrics::datapoint_info!
log = { version = "0.4.20" }
lru = "0.16.0"
magic-domain-program = { git = "https://github.com/magicblock-labs/magic-domain-program.git", rev = "335a22", default-features = false }
magicblock-account-cloner = { path = "./magicblock-account-cloner" }
magicblock-accounts = { path = "./magicblock-accounts" }
magicblock-accounts-db = { path = "./magicblock-accounts-db" }
magicblock-aperture = { path = "./magicblock-aperture" }
magicblock-api = { path = "./magicblock-api" }
magicblock-chainlink = { path = "./magicblock-chainlink" }
magicblock-committor-program = { path = "./magicblock-committor-program", features = [
  "no-entrypoint",
] }
magicblock-committor-service = { path = "./magicblock-committor-service" }
magicblock-config = { path = "./magicblock-config" }
magicblock-core = { path = "./magicblock-core" }
magicblock-delegation-program-api = { git = "https://github.com/magicblock-labs/delegation-program.git", rev = "25386a7c1d406d06b8d07a4d5b0fd37d5e74213b" }
magicblock-ledger = { path = "./magicblock-ledger" }
magicblock-magic-program-api = { path = "./magicblock-magic-program-api" }
magicblock-metrics = { path = "./magicblock-metrics" }
magicblock-processor = { path = "./magicblock-processor" }
magicblock-program = { path = "./programs/magicblock" }
magicblock-rpc-client = { path = "./magicblock-rpc-client" }
magicblock-services = { path = "./magicblock-services" }
magicblock-table-mania = { path = "./magicblock-table-mania" }
magicblock-task-scheduler = { path = "./magicblock-task-scheduler" }
magicblock-tui-client = { path = "./tools/magicblock-tui-client" }
magicblock-validator-admin = { path = "./magicblock-validator-admin" }
magicblock-version = { path = "./magicblock-version" }

num-derive = "0.4"
num-format = "0.4.4"
num-traits = "0.2"
num_cpus = "1.16.0"
parking_lot = "0.12"
paste = "1.0"
prometheus = "0.13.4"
# Keep in sync with `solana-storage-proto` codegen.
prost = "0.14"
protobuf-src = "1.1"
rand = "0.9"
reqwest = "0.12"
# bundled sqlite 3.44
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustc_version = "0.4"
rustc-hash = "2.1"
scc = "2.4"
semver = "1.0.22"
serde = "1.0.217"
serde_json = "1.0"
serde_with = "3.16"
serial_test = "3.2"
sha3 = "0.10.8"
solana-account = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }
solana-account-decoder = { version = "3.1" }
solana-account-decoder-client-types = { version = "3.1" }
solana-account-info = { version = "3.1" }
solana-address-lookup-table-interface = { version = "3.0" }
solana-bpf-loader-program = { version = "3.1" }
solana-clock = { version = "3.0" }
solana-commitment-config = { version = "3.1" }
solana-compute-budget = { version = "3.1" }
solana-compute-budget-interface = { version = "3.0" }
solana-compute-budget-program = { version = "3.1" }
solana-feature-gate-interface = { version = "3.1" }
solana-feature-set = { package = "agave-feature-set", version = "3.1" }
solana-fee-calculator = { version = "3.1" }
solana-fee-structure = { version = "3.0" }
solana-frozen-abi-macro = { version = "3.0" }
solana-hash = { version = "3.1" }
solana-instruction = { version = "3.0" }
solana-keypair = { version = "3.1.0" }
solana-loader-v3-interface = { version = "6.1.0" }
solana-loader-v4-interface = { version = "3.1" }
solana-loader-v4-program = { version = "3.1" }
solana-log-collector = { package = "solana-svm-log-collector", version = "3.1" }
solana-measure = { package = "solana-svm-measure", version = "3.1" }
solana-message = { version = "3.0" }
solana-metrics = { version = "2.3.13" }
solana-native-token = { version = "3.0" }
solana-precompile-error = "3.0"
solana-program = "3.0"
solana-program-option = { version = "3.0" }
solana-program-pack = { version = "3.0" }
solana-program-runtime = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }
solana-pubkey = { version = "3.0" }
solana-pubsub-client = { version = "3.1" }
solana-rent = { version = "3.0" }
solana-rpc-client = { version = "3.1" }
solana-rpc-client-api = { version = "3.1" }
solana-sanitize = { version = "3.0" }
solana-sdk-ids = { version = "3.0" }
solana-seed-derivable = { version = "3.0" }
solana-sha256-hasher = { version = "3.1" }
solana-signature = { version = "3.1" }
solana-signer = { version = "3.0" }
solana-slot-hashes = { version = "3.0" }
solana-storage-proto = { path = "storage-proto" }
solana-svm-callback = { version = "3.1" }
solana-svm-transaction = { version = "3.1" }
solana-system-interface = { version = "3.1" }
solana-system-program = { version = "3.1" }
solana-system-transaction = { version = "3.0" }
solana-sysvar = { version = "3.0" }
solana-timings = { package = "solana-svm-timings", version = "3.1" }
solana-transaction = { version = "3.0" }
solana-transaction-context = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3", features = [
  "dev-context-only-utils",
] }
solana-transaction-error = { version = "3.0" }
solana-transaction-status = { version = "3.1" }
solana-transaction-status-client-types = "3.1"
static_assertions = "1.1.0"
tempfile = "3.10.1"
test-kit = { path = "./test-kit" }
thiserror = "2"
tokio = "1.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.10"
toml = "0.8.13"
tonic = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-log = { version = "0.2", features = ["log-tracer"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twox-hash = { version = "2.1", default-features = false, features = [
  "xxhash3_64",
  "alloc",
] }
url = "2.5.0"

# SPL Token crates used across the workspace
spl-token = { package = "spl-token-interface", version = "2.0" }
spl-token-2022 = { package = "spl-token-2022-interface", version = "2.1" }

[workspace.dependencies.solana-svm]
git = "https://github.com/magicblock-labs/magicblock-svm.git"
branch = "v3"
features = ["dev-context-only-utils"]

[workspace.dependencies.rocksdb]
# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
# when also using the bzip2 crate
version = "0.22.0"

[patch.crates-io]
# some solana dependencies have solana-storage-proto as dependency
# we need to patch them with our version, because they use protobuf-src v1.1.0
# and we use protobuf-src v2.1.1. Otherwise compilation fails
solana-account = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }
solana-program-runtime = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }
solana-storage-proto = { path = "./storage-proto" }
solana-svm = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }
solana-transaction-context = { git = "https://github.com/magicblock-labs/magicblock-svm.git", branch = "v3" }
# Fork is used to enable `disable_manual_compaction` usage
# Fork is based on commit d4e9e16 of rocksdb (parent commit of 0.23.0 release)
# without patching update isn't possible due to conflict with solana deps
rocksdb = { git = "https://github.com/magicblock-labs/rust-rocksdb.git", rev = "6d975197" }
libsodium-rs = { git = "https://github.com/jedisct1/libsodium-rs.git", rev = "0397a6c5785233f9f2ac91f3eedc3cceb74e0060" }
