[package]
name = "compressed-delegation-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]
anchor = []
anchor-idl-build = []
fetch = []

[dependencies]
compressed-delegation-api = { workspace = true }
borsh = { workspace = true }
light-hasher = { workspace = true }
light-sdk = { workspace = true, features = ["v2"] }
light-sdk-types = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
thiserror = { workspace = true }
