[package]
name = "magicblock-account-cloner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
magicblock-accounts-db = { workspace = true }
magicblock-chainlink = { workspace = true }
magicblock-committor-service = { workspace = true }
magicblock-config = { workspace = true }
magicblock-core = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-program = { workspace = true }
magicblock-magic-program-api = { workspace = true }
magicblock-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
magicblock-committor-service = { workspace = true, features = [
  "dev-context-only-utils",
] }
