[package]
name = "magicblock-account-cloner"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
magicblock-chainlink = { workspace = true }
magicblock-core = { workspace = true }
magicblock-ledger = { workspace = true }
magicblock-magic-program-api = { workspace = true }
magicblock-program = { workspace = true }
rand = { workspace = true }
solana-account = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-loader-v4-interface = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-sysvar = { workspace = true }
solana-transaction = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
