[package]
name = "magicblock-accounts-api"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
magicblock-accounts-db = { workspace = true }

solana-account = { workspace = true }
solana-pubkey = { workspace = true }
