[package]
name = "magicblock-accounts-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# sys
libc = "0.2"
nix = { version = "0.29", features = [ "zerocopy" ] }

# storage
memmap2 = "0.9"
# more up to date fork of lmdb bindings by mozilla, still ancient though :(
lmdb = { package = "lmdb-rkv", git = "https://github.com/mozilla/lmdb-rs.git", rev = "9461676" }
# lmdb = "0.8"
reflink = { package = "reflink-copy", version = "0.1" }

# solana
solana-pubkey = "2.2"
solana-account = { workspace = true }
solana-accounts-db = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
solana-geyser-plugin-manager = { workspace = true }
solana-sdk = { workspace = true }

# synchronization
parking_lot = "0.12"

# misc
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
log = "0.4"


[dev-dependencies]
env_logger = "0.11"
