[package]
name = "magicblock-accounts-db"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# sys
libc = "0.2"

# storage
memmap2 = "0.9"
# more up to date fork of lmdb bindings by mozilla, still ancient though :(
lmdb = { package = "lmdb-rkv", git = "https://github.com/mozilla/lmdb-rs.git", rev = "9461676" }
# lmdb = "0.8"
reflink = { package = "reflink-copy", version = "0.1" }

# solana
solana-pubkey = { workspace = true }
solana-account = { workspace = true }

# synchronization
parking_lot = "0.12"

# misc
serde = { workspace = true, features = [ "derive" ] }
thiserror = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }


[dev-dependencies]
env_logger = "0.11"

[features]
default = []
dev-tools = []
